[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Nodes/Signal/SignalNode.gd" type="Script" id=1]
[ext_resource path="res://src/Nodes/Fields/TypeOptions.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/grap_node/graph_content.tres" type="Theme" id=3]
[ext_resource path="res://src/Nodes/Fields/AddSignal.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Nodes/Signal/SignalFieldInput.gd" type="Script" id=5]
[ext_resource path="res://assets/themes/button/round_button.tres" type="Theme" id=7]
[ext_resource path="res://src/Nodes/Fields/NumberField.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Nodes/Fields/Vector2Field.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Nodes/Fields/StringField.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 48.0
content_margin_bottom = 20.0
bg_color = Color( 0.247059, 0.223529, 0.258824, 1 )
border_width_top = 36
border_color = Color( 0, 0.47451, 0.419608, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 48.0
content_margin_bottom = 20.0
bg_color = Color( 0.247059, 0.223529, 0.258824, 1 )
border_width_top = 36
border_color = Color( 0.301961, 0.713726, 0.67451, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[node name="SignalNode" type="GraphNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -450.0
margin_right = -526.0
margin_bottom = -291.0
theme = ExtResource( 3 )
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 2 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
title = "Signal"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.301961, 0.713726, 0.67451, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 263.0
margin_bottom = 230.0
theme = ExtResource( 7 )
custom_constants/separation = 16

[node name="FieldContainer" type="HBoxContainer" parent="Container"]
margin_right = 247.0
margin_bottom = 22.0
size_flags_vertical = 3
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/FieldContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 40, 0 )
text = "Name"
valign = 1

[node name="SignalName" type="LineEdit" parent="Container/FieldContainer"]
margin_left = 47.0
margin_right = 247.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeContainer" parent="Container" instance=ExtResource( 2 )]
margin_right = 247.0
margin_bottom = 60.0

[node name="Label" parent="Container/TypeContainer" index="0"]
margin_right = 43.0
rect_min_size = Vector2( 43, 0 )

[node name="TypeOption" parent="Container/TypeContainer" index="1"]
margin_left = 47.0
margin_right = 247.0

[node name="Vector2Field" parent="Container" instance=ExtResource( 9 )]

[node name="NumberField" parent="Container" instance=ExtResource( 8 )]
margin_top = 76.0
margin_right = 247.0
margin_bottom = 98.0

[node name="StringField" parent="Container" instance=ExtResource( 10 )]

[node name="AddSignal" parent="Container" instance=ExtResource( 4 )]
margin_left = 199.0
margin_top = 114.0
margin_right = 247.0
margin_bottom = 162.0
mouse_default_cursor_shape = 2

[node name="HSeparator" type="HSeparator" parent="Container"]
margin_top = 178.0
margin_right = 247.0
margin_bottom = 182.0

[editable path="Container/TypeContainer"]
